--- a/collection.html
+++ b/collection.html
@@ -2,9 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>collection</title>
+  <link rel="stylesheet" href="./bootstrap.css">
+  <link rel="stylesheet" href="">
 </head>
 <body>
-  
+  <div img=>a</div>
+  <div img= >b</div>
+  <div img= >c</div>
+  <div img= >d</div>
+  <div img= >e</div>
+  <div img= >f</div>
+  <div >g</div>
+  <div>h</div>
+  <div>i</div>
+  <div>j</div>
+  <div>k</div>
+  <div>l</div>
+
+   <footer id="footer" class="container">
+    <div class="row">
+      <div class="col-md-12 footer_text">
+        <nav class="container padding-none">
+      <ul class="nav navbar-header nav-pills nav-justified">
+         <li class="active"><a href="#">TOP</a></li>
+         <li><a href="#">Collection</a></li>
+         <li><a href="#">analogue</a></li>
+         <li><a href="#">Dictionary</a></li>
+         <li><a href="#">information</a></li>
+       </ul>
+     </nav>
+
+      </div>
+    </div>
+  </footer>
+
 </body>
 </html>
