--- a/collection.html
+++ b/collection.html
@@ -7,18 +7,19 @@
   <link rel="stylesheet" href="">
 </head>
 <body>
-  <div img=>a</div>
-  <div img= >b</div>
-  <div img= >c</div>
-  <div img= >d</div>
-  <div img= >e</div>
-  <div img= >f</div>
-  <div >g</div>
-  <div>h</div>
-  <div>i</div>
-  <div>j</div>
-  <div>k</div>
-  <div>l</div>
+  <div><p><img src="" alt=""><></p></div>
+  <div><p><img src="" alt=""><></p></div>
+  <div><p><img src="" alt=""><></p></div>
+  <div><p><img src="" alt=""><></p></div>
+  <div><p><img src="" alt=""><></p></div>
+  <div><p><img src="" alt=""><></p></div>
+  <div><p><img src="" alt=""><></p></div>
+  <div><p><img src="" alt=""><></p></div>
+  <div><p><img src="" alt=""><></p></div>
+  <div><p><img src="" alt=""><></p></div>
+  <div><p><img src="" alt=""><></p></div>
+  <div><p><img src="" alt=""><></p></div>
+
 
    <footer id="footer" class="container">
     <div class="row">
