--- a/collection.html
+++ b/collection.html
@@ -7,18 +7,20 @@
   <link rel="stylesheet" href="">
 </head>
 <body>
-  <div><p><img src="" alt=""></p></div>
-  <div><p><img src="" alt=""></p></div>
-  <div><p><img src="" alt=""></p></div>
-  <div><p><img src="" alt=""></p></div>
-  <div><p><img src="" alt=""></p></div>
-  <div><p><img src="" alt=""></p></div>
-  <div><p><img src="" alt=""></p></div>
-  <div><p><img src="" alt=""></p></div>
-  <div><p><img src="" alt=""></p></div>
-  <div><p><img src="" alt=""></p></div>
-  <div><p><img src="" alt=""></p></div>
-  <div><p><img src="" alt=""></p></div>
+  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
+  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
+  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
+  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
+  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
+  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
+  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
+  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
+  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
+  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
+  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
+  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
+
+
 
 
    <footer id="footer" class="container">
