--- a/collection.html
+++ b/collection.html
@@ -1,26 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>collection</title>
-  <link rel="stylesheet" href="./bootstrap.css">
-  <link rel="stylesheet" href="">
-</head>
-<body>
-  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
-  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
-  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
-  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
-  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
-  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
-  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
-  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
-  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
-  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
-  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
-  <div><p><img src="../enchant_template/images/apad.png" alt=""></p></div>
+  <head>
+    <meta charset="UTF-8">
+    <title>collection</title>
+    <link rel="stylesheet" href="./bootstrap.css">
+    <link rel="stylesheet" href="">
+  </head>
+  <body>
+    <div class="container">
+          <div class="col-md-4 col-sm-4">
+            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+          </div>
+
+          <div class="col-md-4 col-sm-4">
+            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+          </div>
 
 
+          <div class="col-md-4 col-sm-4">
+            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+          </div>
+
+
+          <div class="col-md-4 col-sm-4">
+            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+          </div>
+
+
+          <div class="col-md-4 col-sm-4">
+            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+          </div>
+
+
+          <div class="col-md-4 col-sm-4">
+            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+          </div>
+
+
+          <div class="col-md-4 col-sm-4">
+            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+          </div>
+
+
+          <div class="col-md-4 col-sm-4">
+            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+          </div>
+
+
+          <div class="col-md-4 col-sm-4">
+            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+          </div>
+
+
+          <div class="col-md-4 col-sm-4">
+            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+          </div>
+
+
+          <div class="col-md-4 col-sm-4">
+            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+          </div>
+
+
+          <div class="col-md-4 col-sm-4">
+            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+          </div>
+
+
+        </div>
 
 
    <footer id="footer" class="container">
