--- a/analogue.html
+++ b/analogue.html
@@ -18,8 +18,8 @@
   <footer id="footer" class="container">
     <div class="row">
       <div class="col-md-12 footer_text">
-        <nav class="container padding-none">
-      <ul class="nav navbar-header nav-pills nav-justified">
+        <nav class="nav navbar-inverse">
+      <ul class="nav navbar-nav">
          <li class="active"><a href="#">TOP</a></li>
          <li><a href="#">Collection</a></li>
          <li><a href="#">analogue</a></li>
