--- a/collection.html
+++ b/collection.html
@@ -5,70 +5,75 @@
     <title>collection</title>
     <link rel="stylesheet" href="./bootstrap.css">
     <link rel="stylesheet" href="">
+    <style type="text/css"><!--
+    p {text-align: center; }
+    img {border: 0; } -->
+    </style>
+      <script language="JavaScript" type="text/javascript"><!--
+        function chgSize(imgObj,minW,minH,maxW,maxH){
+          if(imgObj.width == minW){
+            imgObj.width = maxW;
+            imgObj.height = maxH;
+          } else{
+            imgObj.width = minW;
+            imgObj.height = minH;
+            }
+      }
+  //--></script>
+
   </head>
   <body>
     <div class="container">
-          <div class="col-md-4 col-sm-4">
-            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+      <div class="col-md-4 col-sm-4">
+        <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+      </div>
+
+      <div class="col-md-4 col-sm-4">
+        <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+      </div>
+
+      <div class="col-md-4 col-sm-4">
+            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
           </div>
 
-          <div class="col-md-4 col-sm-4">
-            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+      <div class="col-md-4 col-sm-4">
+        <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+      </div>
+
+ <div class="col-md-4 col-sm-4">
+            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
           </div>
 
-
-          <div class="col-md-4 col-sm-4">
-            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+ <div class="col-md-4 col-sm-4">
+            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
           </div>
 
-
-          <div class="col-md-4 col-sm-4">
-            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+ <div class="col-md-4 col-sm-4">
+            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
           </div>
 
-
-          <div class="col-md-4 col-sm-4">
-            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+ <div class="col-md-4 col-sm-4">
+            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
           </div>
 
-
-          <div class="col-md-4 col-sm-4">
-            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+ <div class="col-md-4 col-sm-4">
+            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
           </div>
 
-
-          <div class="col-md-4 col-sm-4">
-            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+ <div class="col-md-4 col-sm-4">
+            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
           </div>
 
-
-          <div class="col-md-4 col-sm-4">
-            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+ <div class="col-md-4 col-sm-4">
+            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
           </div>
 
-
-          <div class="col-md-4 col-sm-4">
-            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-          </div>
-
-
-          <div class="col-md-4 col-sm-4">
-            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-          </div>
-
-
-          <div class="col-md-4 col-sm-4">
-            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
+ <div class="col-md-4 col-sm-4">
+            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
           </div>
 
 
-          <div class="col-md-4 col-sm-4">
-            <p><img src="../enchant_template/images/apad.png" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-          </div>
-
-
-        </div>
-
+    </div>
 
    <footer id="footer" class="container">
     <div class="row">
