--- a/collection.html
+++ b/collection.html
@@ -1,79 +1,392 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8">
     <title>collection</title>
     <link rel="stylesheet" href="./bootstrap.css">
-    <link rel="stylesheet" href="">
-    <style type="text/css"><!--
-    p {text-align: center; }
-    img {border: 0; } -->
-    </style>
-      <script language="JavaScript" type="text/javascript"><!--
-        function chgSize(imgObj,minW,minH,maxW,maxH){
-          if(imgObj.width == minW){
-            imgObj.width = maxW;
-            imgObj.height = maxH;
-          } else{
-            imgObj.width = minW;
-            imgObj.height = minH;
-            }
+
+    <!--
+    画像を指定サイズにリサイズして表示する
+    http://tm.root-n.com/programming:javascript:jquery:reseize_image
+    -->
+
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.0.js"></script>
+    <style type="text/css">
+      <!--
+      #largeImg1 img{
+        display: none;
       }
-  //--></script>
+      #largeImg2 img{
+        display: none;
+      }
+      #largeImg3 img{
+        display: none;
+      }
+      #largeImg4 img{
+        display: none;
+      }
+      #largeImg5 img{
+        display: none;
+      }
+      #largeImg6 img{
+        display: none;
+      }
+      #largeImg7 img{
+        display: none;
+      }
+      #largeImg8 img{
+        display: none;
+      }
+      #largeImg9 img{
+        display: none;
+      }
+      #largeImg10 img{
+        display: none;
+      }
+      #largeImg11 img{
+        display: none;
+      }
+      #largeImg12 img{
+        display: none;
+      }
 
+      #back-curtain{
+        background: rgba(0, 0, 0, 0.5); //
+        display: none;
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
+      -->
+    </style>
   </head>
+
   <body>
+    <h1>Collection</h1>
+
+    <!--▼ 画像一覧▼  -->
     <div class="container">
-      <div class="col-md-4 col-sm-4">
-        <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-      </div>
 
-      <div class="col-md-4 col-sm-4">
-        <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-      </div>
+      <div class="gallery col-md-3 col-sm-3"><a href="大きい画像1"><img src="./image/1.jpg"alt="" width="160" height="160"></a></div>
 
-      <div class="col-md-4 col-sm-4">
-            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-          </div>
+      <div class="gallery col-md-3 col-sm-3"><a href="大きい画像2"><img src="./image/2.jpg"alt="" width="160" height="160"></a></div>
 
-      <div class="col-md-4 col-sm-4">
-        <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-      </div>
+      <div class="gallery col-md-3 col-sm-3"><a href="大きい画像3"><img src="./image/3.jpg"alt="" width="160" height="160"></a></div>
 
- <div class="col-md-4 col-sm-4">
-            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-          </div>
+      <div class="gallery col-md-3 col-sm-3"><a href="大きい画像4"><img src="./image/4.jpg"alt="" width="160" height="160"></a></div>
 
- <div class="col-md-4 col-sm-4">
-            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-          </div>
+      <div class="gallery col-md-3 col-sm-3"><a href="大きい画像5"><img src="./image/5.jpg"alt="" width="160" height="160"></a></div>
 
- <div class="col-md-4 col-sm-4">
-            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-          </div>
+      <div class="gallery col-md-3 col-sm-3"><a href="大きい画像6"><img src="./image/6.jpg"alt="" width="160" height="160"></a></div>
 
- <div class="col-md-4 col-sm-4">
-            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-          </div>
+      <div class="gallery col-md-3 col-sm-3"><a href="大きい画像7"><img src="./image/7.jpg"alt="" width="160" height="160"></a></div>
 
- <div class="col-md-4 col-sm-4">
-            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-          </div>
+      <div class="gallery col-md-3 col-sm-3"><a href="大きい画像8"><img src="./image/8.jpg"alt="" width="160" height="160"></a></div>
 
- <div class="col-md-4 col-sm-4">
-            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-          </div>
+      <div class="gallery col-md-3 col-sm-3"><a href="大きい画像9"><img src="./image/9.jpg"alt="" width="160" height="160"></a></div>
 
- <div class="col-md-4 col-sm-4">
-            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-          </div>
+      <div class="gallery col-md-3 col-sm-3"><a href="大きい画像10"><img src="./image/10.jpg"alt="" width="160" height="160"></a></div>
 
- <div class="col-md-4 col-sm-4">
-            <p><a href="javascript:void(0);"><img src="../enchant_template/images/apad.png" width="170"height="115" alt="35" onmouseover="this.src='カーソルを合わせた時の画像'" onmouseout="this.src='../enchant_template/images/apad.png'" onclick="chgSize(this,170,115,320,200);this.src='../enchant_template/images/apad.png'" alt="no_image"/></p>
-          </div>
+      <div class="gallery col-md-3 col-sm-3"><a href="大きい画像11"><img src="./image/11.jpg"alt="" width="160" height="160"></a></div>
+
+      <div class="gallery col-md-3 col-sm-3"><a href="大きい画像12"><img src="./image/12.jpg"alt="" width="160" height="160"></a></div>
+
     </div>
+    <!-- ▲ 画像一覧▲  -->
+    <!--☆ -->
 
-   <footer id="footer" class="container">
+    <div id="largeImg1"><img src="./image/1.jpg"></div>
+    <div id="largeImg2"><img src="./image/2.jpg"></div>
+    <div id="largeImg3"><img src="./image/3.jpg"></div>
+    <div id="largeImg4"><img src="./image/4.jpg"></div>
+    <div id="largeImg5"><img src="./image/5.jpg"></div>
+    <div id="largeImg6"><img src="./image/6.jpg"></div>
+    <div id="largeImg7"><img src="./image/7.jpg"></div>
+    <div id="largeImg8"><img src="./image/8.jpg"></div>
+    <div id="largeImg9"><img src="./image/9.jpg"></div>
+    <div id="largeImg10"><img src="./image/10.jpg"></div>
+    <div id="largeImg11"><img src="./image/11.jpg"></div>
+    <div id="largeImg12"><img src="./image/12.jpg"></div>
+
+    <script type="text/javascript">
+
+    var img_width;
+    var img_height;
+    var img_ratio;
+
+    // ウィンドウオープン時
+    jQuery.event.add(window, "load", function(){
+
+      // 元の画像サイズを調べる
+        var el1 = $('#largeImg1 img');
+          var img = new Image();
+          img.src = el1.attr('src');
+          img_width = img.width;          // 幅
+          img_height = img.height;        // 高さ
+          img_ratio = img_height/img_width;   // 画像の幅高比
+
+        var el2 = $('#largeImg2 img');
+          var img = new Image();
+          img.src = el2.attr('src');
+          img_width = img.width;          // 幅
+          img_height = img.height;        // 高さ
+        img_ratio = img_height/img_width;   // 画像の幅高比
+
+        var el3 = $('#largeImg3 img');
+          var img = new Image();
+          img.src = el3.attr('src');
+          img_width = img.width;          // 幅
+          img_height = img.height;        // 高さ
+        img_ratio = img_height/img_width;   // 画像の幅高比
+
+        var el4 = $('#largeImg4 img');
+          var img = new Image();
+          img.src = el4.attr('src');
+          img_width = img.width;          // 幅
+          img_height = img.height;        // 高さ
+        img_ratio = img_height/img_width;   // 画像の幅高比
+
+        var el5 = $('#largeImg5 img');
+          var img = new Image();
+          img.src = el5.attr('src');
+          img_width = img.width;          // 幅
+          img_height = img.height;        // 高さ
+        img_ratio = img_height/img_width;   // 画像の幅高比
+
+        var el6 = $('#largeImg6 img');
+          var img = new Image();
+          img.src = el6.attr('src');
+          img_width = img.width;          // 幅
+          img_height = img.height;        // 高さ
+        img_ratio = img_height/img_width;   // 画像の幅高比
+
+        var el7 = $('#largeImg7 img');
+          var img = new Image();
+          img.src = el7.attr('src');
+          img_width = img.width;          // 幅
+          img_height = img.height;        // 高さ
+        img_ratio = img_height/img_width;   // 画像の幅高比
+
+        var el8 = $('#largeImg8 img');
+          var img = new Image();
+          img.src = el8.attr('src');
+          img_width = img.width;          // 幅
+          img_height = img.height;        // 高さ
+        img_ratio = img_height/img_width;   // 画像の幅高比
+
+        var el9 = $('#largeImg9 img');
+          var img = new Image();
+          img.src = el9.attr('src');
+          img_width = img.width;          // 幅
+          img_height = img.height;        // 高さ
+        img_ratio = img_height/img_width;   // 画像の幅高比
+
+        var el10 = $('#largeImg10 img');
+          var img = new Image();
+          img.src = el10.attr('src');
+          img_width = img.width;          // 幅
+          img_height = img.height;        // 高さ
+        img_ratio = img_height/img_width;   // 画像の幅高比
+
+        var el11 = $('#largeImg11 img');
+          var img = new Image();
+          img.src = el11.attr('src');
+          img_width = img.width;          // 幅
+          img_height = img.height;        // 高さ
+        img_ratio = img_height/img_width;   // 画像の幅高比
+
+        var el12 = $('#largeImg12 img');
+          var img = new Image();
+          img.src = el12.attr('src');
+          img_width = img.width;          // 幅
+          img_height = img.height;        // 高さ
+          img_ratio = img_height/img_width;   // 画像の幅高比
+    });
+
+  $('.gallery img').click(function(e) {
+      e.preventDefault();         // 規定のイベントを無効（リンク等）
+
+      disp();                 // 拡大画像表示
+      /* ▼ フェードイン▼  */
+      $('#largeImg1 img').fadeIn();
+  });
+
+
+      ウィンドウサイズ変更時
+      jQuery.event.add(window, "resize", function(){disp();});    // 拡大画像表示
+
+      // 暗幕と拡大画像を非表示
+      $('#back-curtain, #largeImg1').click(function() {
+        $('#largeImg1 img').fadeOut('slow', function() {$('#back-curtain').hide();});
+      });
+
+      $('#back-curtain, #largeImg2').click(function() {
+        $('#largeImg2 img').fadeOut('slow', function() {$('#back-curtain').hide();});
+      });
+
+      $('#back-curtain, #largeImg3').click(function() {
+        $('#largeImg3 img').fadeOut('slow', function() {$('#back-curtain').hide();});
+      });
+
+      $('#back-curtain, #largeImg4').click(function() {
+        $('#largeImg4 img').fadeOut('slow', function() {$('#back-curtain').hide();});
+      });
+
+      $('#back-curtain, #largeImg5').click(function() {
+        $('#largeImg5 img').fadeOut('slow', function() {$('#back-curtain').hide();});
+      });
+
+      $('#back-curtain, #largeImg6').click(function() {
+        $('#largeImg6 img').fadeOut('slow', function() {$('#back-curtain').hide();});
+      });
+
+      $('#back-curtain, #largeImg7').click(function() {
+        $('#largeImg7 img').fadeOut('slow', function() {$('#back-curtain').hide();});
+      });
+
+      $('#back-curtain, #largeImg8').click(function() {
+        $('#largeImg8 img').fadeOut('slow', function() {$('#back-curtain').hide();});
+      });
+
+      $('#back-curtain, #largeImg9').click(function() {
+        $('#largeImg9 img').fadeOut('slow', function() {$('#back-curtain').hide();});
+      });
+
+      $('#back-curtain, #largeImg10').click(function() {
+        $('#largeImg10 img').fadeOut('slow', function() {$('#back-curtain').hide();});
+      });
+
+      $('#back-curtain, #largeImg11').click(function() {
+        $('#largeImg11 img').fadeOut('slow', function() {$('#back-curtain').hide();});
+      });
+
+      $('#back-curtain, #largeImg12').click(function() {
+        $('#largeImg12 img').fadeOut('slow', function() {$('#back-curtain').hide();});
+      });
+
+      // 拡大画像表示サブルーチン
+      function disp(){
+        $('#back-curtain')
+        .css({
+          'width' : $(window).width(),    // ウィンドウ幅
+          'height': $(window).height()    // 同 高さ
+        })
+        .show();
+
+        var win_ratio = $(window).height() / $(window).width(); // ウィンドウの幅高比
+        var w;  var h;      // 幅、高さ
+        const margin=50;    // 上下左右の最低マージン
+
+        if(img_ratio > win_ratio ){      // 画像の方がウィンドウより縦長
+          h= $(window).height()-2*margin; // 画像の高さ　ウィンドウに合わせる
+          if( h < $(window).height() ) h=$(window).height()-2*margin;
+          w=h/img_ratio;
+        }else{                  //  ウィンドウの方が縦長
+          w=$(window).width()-2*margin;   // 画像幅　元の画像に合わせる
+          if( w < $(window).width() ) w=$(window).width()-2*margin;
+          h=w * img_ratio;
+        }
+
+        $('#largeImg1 img').css({
+          'position': 'absolute',
+          'left': ($(window).width()-w)/2+'px',
+          'top' : ($(window).height()-h)/2+'px',
+          'width' :w+'px',
+          'height':h+'px'
+        });
+        $('#largeImg2 img').css({
+          'position': 'absolute',
+          'left': ($(window).width()-w)/2+'px',
+          'top' : ($(window).height()-h)/2+'px',
+          'width' :w+'px',
+          'height':h+'px'
+        });
+
+        $('#largeImg3 img').css({
+          'position': 'absolute',
+          'left': ($(window).width()-w)/2+'px',
+          'top' : ($(window).height()-h)/2+'px',
+          'width' :w+'px',
+          'height':h+'px'
+        });
+
+        $('#largeImg4 img').css({
+          'position': 'absolute',
+          'left': ($(window).width()-w)/2+'px',
+          'top' : ($(window).height()-h)/2+'px',
+          'width' :w+'px',
+          'height':h+'px'
+        });
+
+        $('#largeImg5 img').css({
+          'position': 'absolute',
+          'left': ($(window).width()-w)/2+'px',
+          'top' : ($(window).height()-h)/2+'px',
+          'width' :w+'px',
+          'height':h+'px'
+        });
+
+        $('#largeImg6 img').css({
+          'position': 'absolute',
+          'left': ($(window).width()-w)/2+'px',
+          'top' : ($(window).height()-h)/2+'px',
+          'width' :w+'px',
+          'height':h+'px'
+        });
+
+        $('#largeImg7 img').css({
+          'position': 'absolute',
+          'left': ($(window).width()-w)/2+'px',
+          'top' : ($(window).height()-h)/2+'px',
+          'width' :w+'px',
+          'height':h+'px'
+        });
+
+        $('#largeImg8 img').css({
+          'position': 'absolute',
+          'left': ($(window).width()-w)/2+'px',
+          'top' : ($(window).height()-h)/2+'px',
+          'width' :w+'px',
+          'height':h+'px'
+        });
+
+        $('#largeImg9 img').css({
+          'position': 'absolute',
+          'left': ($(window).width()-w)/2+'px',
+          'top' : ($(window).height()-h)/2+'px',
+          'width' :w+'px',
+          'height':h+'px'
+        });
+
+        $('#largeImg10 img').css({
+          'position': 'absolute',
+          'left': ($(window).width()-w)/2+'px',
+          'top' : ($(window).height()-h)/2+'px',
+          'width' :w+'px',
+          'height':h+'px'
+        });
+
+        $('#largeImg11 img').css({
+          'position': 'absolute',
+          'left': ($(window).width()-w)/2+'px',
+          'top' : ($(window).height()-h)/2+'px',
+          'width' :w+'px',
+          'height':h+'px'
+        });
+
+        $('#largeImg12 img').css({
+          'position': 'absolute',
+          'left': ($(window).width()-w)/2+'px',
+          'top' : ($(window).height()-h)/2+'px',
+          'width' :w+'px',
+          'height':h+'px'
+        });
+
+      }
+
+    </script>
+
+          <footer id="footer" class="container">
     <div class="row">
       <div class="col-md-12 footer_text">
         <nav class="container padding-none">
