--- a/collection.html
+++ b/collection.html
@@ -5,14 +5,9 @@
     <title>collection</title>
     <link rel="stylesheet" href="./bootstrap.css">
 
-    <!--
-    画像を指定サイズにリサイズして表示する
-    http://tm.root-n.com/programming:javascript:jquery:reseize_image
-    -->
-
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.0.js"></script>
+       <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.0.js"></script>
     <style type="text/css">
-      <!--
+    <!--
       #largeImg1 img{
         display: none;
       }
@@ -49,15 +44,14 @@
       #largeImg12 img{
         display: none;
       }
-
       #back-curtain{
-        background: rgba(0, 0, 0, 0.5); //
+        background: rgba(0, 0, 0, 0.5); //背景を黒の半透明
         display: none;
         position: absolute;
         left: 0;
         top: 0;
       }
-      -->
+    -->
     </style>
   </head>
 
@@ -93,20 +87,21 @@
 
     </div>
     <!-- ▲ 画像一覧▲  -->
-    <!--☆ -->
 
-    <div id="largeImg1"><img src="./image/1.jpg"></div>
-    <div id="largeImg2"><img src="./image/2.jpg"></div>
-    <div id="largeImg3"><img src="./image/3.jpg"></div>
-    <div id="largeImg4"><img src="./image/4.jpg"></div>
-    <div id="largeImg5"><img src="./image/5.jpg"></div>
-    <div id="largeImg6"><img src="./image/6.jpg"></div>
-    <div id="largeImg7"><img src="./image/7.jpg"></div>
-    <div id="largeImg8"><img src="./image/8.jpg"></div>
-    <div id="largeImg9"><img src="./image/9.jpg"></div>
-    <div id="largeImg10"><img src="./image/10.jpg"></div>
-    <div id="largeImg11"><img src="./image/11.jpg"></div>
-    <div id="largeImg12"><img src="./image/12.jpg"></div>
+    <div id="back-curtain"></div>
+
+    <div id="largeImg1"><img src="./image/1.jpg"alt=""></div>
+    <div id="largeImg2"><img src="./image/2.jpg"alt=""></div>
+    <div id="largeImg3"><img src="./image/3.jpg"alt=""></div>
+    <div id="largeImg4"><img src="./image/4.jpg"alt=""></div>
+    <div id="largeImg5"><img src="./image/5.jpg"alt=""></div>
+    <div id="largeImg6"><img src="./image/6.jpg"alt=""></div>
+    <div id="largeImg7"><img src="./image/7.jpg"alt=""></div>
+    <div id="largeImg8"><img src="./image/8.jpg"alt=""></div>
+    <div id="largeImg9"><img src="./image/9.jpg"alt=""></div>
+    <div id="largeImg10"><img src="./image/10.jpg"alt=""></div>
+    <div id="largeImg11"><img src="./image/11.jpg"alt=""></div>
+    <div id="largeImg12"><img src="./image/12.jpg"alt=""></div>
 
     <script type="text/javascript">
 
@@ -116,7 +111,6 @@
 
     // ウィンドウオープン時
     jQuery.event.add(window, "load", function(){
-
       // 元の画像サイズを調べる
         var el1 = $('#largeImg1 img');
           var img = new Image();
@@ -124,144 +118,19 @@
           img_width = img.width;          // 幅
           img_height = img.height;        // 高さ
           img_ratio = img_height/img_width;   // 画像の幅高比
+   });
+      $('.gallery img').click(function(e) {
+        e.preventDefault();         // 規定のイベントを無効（リンク等）
 
-        var el2 = $('#largeImg2 img');
-          var img = new Image();
-          img.src = el2.attr('src');
-          img_width = img.width;          // 幅
-          img_height = img.height;        // 高さ
-        img_ratio = img_height/img_width;   // 画像の幅高比
-
-        var el3 = $('#largeImg3 img');
-          var img = new Image();
-          img.src = el3.attr('src');
-          img_width = img.width;          // 幅
-          img_height = img.height;        // 高さ
-        img_ratio = img_height/img_width;   // 画像の幅高比
-
-        var el4 = $('#largeImg4 img');
-          var img = new Image();
-          img.src = el4.attr('src');
-          img_width = img.width;          // 幅
-          img_height = img.height;        // 高さ
-        img_ratio = img_height/img_width;   // 画像の幅高比
-
-        var el5 = $('#largeImg5 img');
-          var img = new Image();
-          img.src = el5.attr('src');
-          img_width = img.width;          // 幅
-          img_height = img.height;        // 高さ
-        img_ratio = img_height/img_width;   // 画像の幅高比
-
-        var el6 = $('#largeImg6 img');
-          var img = new Image();
-          img.src = el6.attr('src');
-          img_width = img.width;          // 幅
-          img_height = img.height;        // 高さ
-        img_ratio = img_height/img_width;   // 画像の幅高比
-
-        var el7 = $('#largeImg7 img');
-          var img = new Image();
-          img.src = el7.attr('src');
-          img_width = img.width;          // 幅
-          img_height = img.height;        // 高さ
-        img_ratio = img_height/img_width;   // 画像の幅高比
-
-        var el8 = $('#largeImg8 img');
-          var img = new Image();
-          img.src = el8.attr('src');
-          img_width = img.width;          // 幅
-          img_height = img.height;        // 高さ
-        img_ratio = img_height/img_width;   // 画像の幅高比
-
-        var el9 = $('#largeImg9 img');
-          var img = new Image();
-          img.src = el9.attr('src');
-          img_width = img.width;          // 幅
-          img_height = img.height;        // 高さ
-        img_ratio = img_height/img_width;   // 画像の幅高比
-
-        var el10 = $('#largeImg10 img');
-          var img = new Image();
-          img.src = el10.attr('src');
-          img_width = img.width;          // 幅
-          img_height = img.height;        // 高さ
-        img_ratio = img_height/img_width;   // 画像の幅高比
-
-        var el11 = $('#largeImg11 img');
-          var img = new Image();
-          img.src = el11.attr('src');
-          img_width = img.width;          // 幅
-          img_height = img.height;        // 高さ
-        img_ratio = img_height/img_width;   // 画像の幅高比
-
-        var el12 = $('#largeImg12 img');
-          var img = new Image();
-          img.src = el12.attr('src');
-          img_width = img.width;          // 幅
-          img_height = img.height;        // 高さ
-          img_ratio = img_height/img_width;   // 画像の幅高比
-    });
-
-  $('.gallery img').click(function(e) {
-      e.preventDefault();         // 規定のイベントを無効（リンク等）
-
-      disp();                 // 拡大画像表示
-      /* ▼ フェードイン▼  */
-      $('#largeImg1 img').fadeIn();
-  });
-
-
-      ウィンドウサイズ変更時
+        disp();                 // 拡大画像表示
+      //  フェードイン
+        $('#largeImg1 img').fadeIn();
+      });
+      //ウィンドウサイズ変更時
       jQuery.event.add(window, "resize", function(){disp();});    // 拡大画像表示
-
       // 暗幕と拡大画像を非表示
       $('#back-curtain, #largeImg1').click(function() {
         $('#largeImg1 img').fadeOut('slow', function() {$('#back-curtain').hide();});
-      });
-
-      $('#back-curtain, #largeImg2').click(function() {
-        $('#largeImg2 img').fadeOut('slow', function() {$('#back-curtain').hide();});
-      });
-
-      $('#back-curtain, #largeImg3').click(function() {
-        $('#largeImg3 img').fadeOut('slow', function() {$('#back-curtain').hide();});
-      });
-
-      $('#back-curtain, #largeImg4').click(function() {
-        $('#largeImg4 img').fadeOut('slow', function() {$('#back-curtain').hide();});
-      });
-
-      $('#back-curtain, #largeImg5').click(function() {
-        $('#largeImg5 img').fadeOut('slow', function() {$('#back-curtain').hide();});
-      });
-
-      $('#back-curtain, #largeImg6').click(function() {
-        $('#largeImg6 img').fadeOut('slow', function() {$('#back-curtain').hide();});
-      });
-
-      $('#back-curtain, #largeImg7').click(function() {
-        $('#largeImg7 img').fadeOut('slow', function() {$('#back-curtain').hide();});
-      });
-
-      $('#back-curtain, #largeImg8').click(function() {
-        $('#largeImg8 img').fadeOut('slow', function() {$('#back-curtain').hide();});
-      });
-
-      $('#back-curtain, #largeImg9').click(function() {
-        $('#largeImg9 img').fadeOut('slow', function() {$('#back-curtain').hide();});
-      });
-
-      $('#back-curtain, #largeImg10').click(function() {
-        $('#largeImg10 img').fadeOut('slow', function() {$('#back-curtain').hide();});
-      });
-
-      $('#back-curtain, #largeImg11').click(function() {
-        $('#largeImg11 img').fadeOut('slow', function() {$('#back-curtain').hide();});
-      });
-
-      $('#back-curtain, #largeImg12').click(function() {
-        $('#largeImg12 img').fadeOut('slow', function() {$('#back-curtain').hide();});
       });
 
       // 拡大画像表示サブルーチン
@@ -384,9 +253,9 @@
 
       }
 
-    </script>
+  </script>
 
-          <footer id="footer" class="container">
+  <footer id="footer" class="container">
     <div class="row">
       <div class="col-md-12 footer_text">
         <nav class="container padding-none">
@@ -397,8 +266,7 @@
          <li><a href="#">Dictionary</a></li>
          <li><a href="#">information</a></li>
        </ul>
-     </nav>
-
+        </nav>
       </div>
     </div>
   </footer>
