--- a/collection.html
+++ b/collection.html
@@ -51,6 +51,11 @@
         left: 0;
         top: 0;
       }
+      a:hover {
+      opacity:0.8;
+      filter:alpha(opacity=80);
+      -ms-filter:"(opacity=80)";
+      }
     -->
     </style>
   </head>
