--- a/collection.html
+++ b/collection.html
@@ -61,6 +61,12 @@
   </head>
 
   <body>
+    <header>
+      <div class="">
+        <img src="" alt="analogue.log">
+      </div>
+    </header>
+
     <h1>Collection</h1>
 
     <!--▼ 画像一覧▼  -->
@@ -381,13 +387,16 @@
 
       }
 
-  </script>
-
+    </script>
+    <p/>
   <footer id="footer" class="container">
     <div class="row">
       <div class="col-md-12 footer_text">
-        <nav class="container padding-none">
-      <ul class="nav navbar-header nav-pills nav-justified">
+     <!--   <nav class="container padding-none">
+       <ul class="nav navbar-header nav-pills nav-justified">
+         -->
+         <nav class="nav navbar-inverse">
+           <ul class="nav navbar-nav">
          <li class="active"><a href="#">TOP</a></li>
          <li><a href="#">Collection</a></li>
          <li><a href="#">analogue</a></li>
@@ -398,6 +407,5 @@
       </div>
     </div>
   </footer>
-
 </body>
 </html>
